--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -779,6 +779,30 @@ header {
       img {
         width: 100%;
       }
+      content {
+        display: block;
+        padding: 10px;
+        .img {
+          border-radius: 3px;
+          width: 100%;
+          background: #965a42;
+          margin-bottom: 10px;
+          img {
+            padding: 5px 15px;
+          }
+        }
+        h4 {
+          font-size: 11pt;
+          font-weight: 700;
+          line-height: 1.3;
+          color: #333;
+          display: inline;
+        }
+        .date {
+          font-size: 8pt;
+          color: #333;
+        }
+      }
     }
   }
 }
