--- a/src/less/style.less
+++ b/src/less/style.less
@@ -976,7 +976,7 @@ header {
 .del16 {
   padding: 100px 0 100px 0;
   color: #fff;
-  background: #1D2822;
+  background: #242B27;
   @media (max-width: 768px) { 
     padding: 60px 0;
   }
@@ -1003,5 +1003,88 @@ header {
     left: 53%;
     width: 5%;
     animation: right_gear 1.5s infinite;
+  }
+}
+
+
+
+/***************** DEL 16 - Slakten ******************/
+
+@keyframes lamp_on { 
+  0% { transform:rotate(-2deg); opacity: 0; } 
+  50% { transform:rotate(2deg); } 
+  90% { opacity: 0; }  
+  93% { opacity: 1; } 
+  97% { opacity: 1; } 
+  100% { transform:rotate(-2deg); opacity: 0; } 
+}
+
+@keyframes lamp_off { 
+  0% { transform:rotate(-2deg); opacity: 1; } 
+  50% { transform:rotate(2deg); } 
+  90% { opacity: 1; }  
+  93% { opacity: 0; } 
+  97% { opacity: 0; } 
+  100% { transform:rotate(-2deg); opacity: 1; } 
+}
+
+@keyframes butcher_light { 
+  0% { opacity: 0.2; } 
+  90% { opacity: 0.2; } 
+  93% { opacity: 1; } 
+  97% { opacity: 1; } 
+  100% { opacity: 0.2; }
+}
+
+@keyframes butcher_dark { 
+  0% { opacity: 0.8; } 
+  90% { opacity: 0.8; } 
+  93% { opacity: 0; } 
+  97% { opacity: 0; } 
+  100% { opacity: 0.8; } 
+}
+
+.del17 {
+  color: #fff;
+  background: #31313A;
+  @media (max-width: 768px) { 
+    padding: 60px 0;
+  }
+  .text {
+    padding: 100px 0 100px 0;
+  }
+  .butcher{
+    padding: 60px 0;
+    overflow: hidden;
+    position: relative;
+    .lamp_on {
+      transform-origin: 0% 0%;
+      position: absolute;
+      left: 90%;
+      top: -10px;
+      animation: lamp_on 3s infinite;
+    }
+    .lamp_off {
+      transform-origin: 0% 0%;
+      position: absolute;
+      left: 90%;
+      top: -10px;
+      animation: lamp_off 3s infinite;
+    }
+    .butcher_light {
+      position: absolute;
+      opacity: 1;
+      width: 100%;
+      padding: 0 10%;
+      animation: butcher_light 3s infinite;
+    }
+    .butcher_dark {
+      opacity: 0;
+      left: 0;
+      top: 0;
+      width: 100%;
+      padding: 0 10%;
+      animation: butcher_dark 3s infinite;
+    }
   }
 }
