Og-image and a little more

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1096,15 +1096,10 @@ header {
 
 .del18 {
   color: #333;
-  background: #eee;
-  .text {
-    padding: 100px 0;
-    @media (max-width: 768px) {
-      padding: 60px 0;
-    }
-    hr {
-      border-top: 2px solid rgba(0,0,0,0.1);
-    }
+  background: #D5D5D5;
+  padding: 100px 0;
+  @media (max-width: 768px) {
+    padding: 60px 0;
   }
 }
 
@@ -1134,8 +1129,8 @@ header {
 
 .del19 {
   color: #333;
-  background: #eee;
-  padding-bottom: 60px;
+  background: #DEDEDE;
+  padding: 100px 0;
   @media (max-width: 768px) {
     padding: 60px 0;
   }
@@ -1200,8 +1195,8 @@ header {
 
 .del20 {
   color: #333;
-  background: #eee;
-  padding-bottom: 60px;
+  background: #C1C1C1;
+  padding: 100px 0;
   @media (max-width: 768px) {
     padding: 60px 0;
   }
@@ -1232,3 +1227,12 @@ header {
   }
 }
 
+
+.del21 {
+  color: #333;
+  background: #DEDEDE;
+  padding: 100px 0;
+  @media (max-width: 768px) {
+    padding: 60px 0;
+  }
+}
