--- a/src/less/style.less
+++ b/src/less/style.less
@@ -589,19 +589,19 @@ header {
         img {
           margin-top: -70px;
         }
-        &.chicken {
-          background: #E5A55A;
-        }
-        &.pig {
-          background: #ED827A;
-        }
-        &.cow {
-          background: #603813;
-        }
-        &.lamb {
-          background: #7FA9BF;
-        }
       }
+    }
+    .chicken .content {
+      background: #E5A55A;
+    }
+    .pig .content {
+      background: #ED827A;
+    }
+    .cow .content {
+      background: #603813;
+    }
+    .lamb .content {
+      background: #7FA9BF;
     }
     .numbers {
       font-size: 17pt;
@@ -1195,7 +1195,7 @@ header {
 
 .del20 {
   color: #333;
-  background: #C1C1C1;
+  background: #D5D5D5;
   padding: 100px 0;
   @media (max-width: 768px) {
     padding: 60px 0;
