--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1165,17 +1165,18 @@ header {
         left: 8%;
         top: 30%;
         transform: rotate(180deg);
-        animation: lightning 2s linear infinite;
+        animation: lightning 1s linear infinite;
       }
       &.two {
         left: 11%;
         top: 28%;
-        animation: lightning 3.1s linear infinite;
+        animation: lightning 1.1s linear infinite;
       }
       &.three {
         left: 10%;
         top: 53%;
-        animation: lightning 2.4s linear infinite;
+        transform: rotate(90deg);
+        animation: lightning 1.4s linear infinite;
       }
     }
   }
@@ -1225,11 +1226,78 @@ header {
 }
 
 
+/***************** DEL 21 - Bultpistol ******************/
+
 .del21 {
   color: #333;
   background: #DEDEDE;
   padding: 100px 0;
   @media (max-width: 768px) {
     padding: 60px 0;
+  }
+}
+
+
+
+/***************** DEL 22 - Avblodning ******************/
+
+@keyframes hanging { 
+  0% { transform:rotate(-1deg);} 
+  50% { transform:rotate(1deg); } 
+  100% { transform:rotate(-1deg);} 
+}
+
+.del22 {
+  color: #333;
+  background: #D5D5D5;
+  padding: 100px 0;
+  @media (max-width: 768px) {
+    padding: 60px 0;
+  }
+  .text {
+    margin-bottom: 60px;
+  }
+  .bleeding {
+    position: relative;
+    overflow: hidden;
+    .hanging {
+      position: absolute;
+      top: 0.2%;
+      left: 63%;
+      width: 25%;
+      transform-origin: 100% 0%;
+      animation: hanging 3s infinite;
+    }
+  }
+}
+
+
+
+
+/***************** DEL 23 - Styckning ******************/
+
+
+@-webkit-keyframes hanging_pig {
+    from { background-position: left top; }
+    to { background-position: 194px top; }
+}
+
+.del23 {
+  color: #333;
+  background: #DEDEDE;
+  padding: 100px 0;
+  @media (max-width: 768px) {
+    padding: 60px 0;
+  }
+  .text {
+    margin-bottom: 60px;
+  }
+  .machine {
+    width: 100%;
+    height: 308px;
+    position: relative;
+    overflow: hidden;
+    background: url("../img/hanging_pig.svg");
+    animation: hanging_pig 10s linear infinite;
   }
 }
