--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1297,7 +1297,8 @@ header {
     height: 308px;
     position: relative;
     overflow: hidden;
+    margin-bottom: 60px;
     background: url("../img/hanging_pig.svg");
-    animation: hanging_pig 10s linear infinite;
+    animation: hanging_pig 1s  infinite;
   }
 }
